# InitGL

./: .gitignore  CMakeLists.txt  GLCamera.cpp  GLCamera.hpp  GLKeyboard.cpp  GLKeyboard.hpp  GLMesh.cpp  GLMesh.hpp  GLModel.cpp  GLModel.hpp  GLMouse.cpp  GLMouse.hpp  GLProgram.cpp  GLProgram.hpp  GLShader.cpp  GLShader.hpp  InitGL.cpp  InitGL.hpp  README.md
gl/: gl.c
include/IGL/: GLMesh.hpp  GLModel.hpp  GLProgram.hpp  GLShader.hpp  InitGL.hpp  __defs__.hpp
src/: GLCamera.cpp  GLKeyboard.cpp  GLMesh.cpp  GLModel.cpp  GLMouse.cpp  GLProgram.cpp  GLShader.cpp  InitGL.cpp
